--- a/print.vm
+++ b/print.vm
@@ -1,27 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <title>Top file print</title>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
-<style>
-    table, th, td {
-        border: 1px solid black;
-        border-collapse: collapse;
-        padding: 5px;
-        text-align: left;
-    }
-</style>
 <body>
-<h1 style="text-align: center">Header</h1>
+<h1>Header</h1>
     #foreach($head in $header)
-        <b style="text-align: left;">$head</b><br>
+        <b>$head</b><br>
     #end
 <center>
     <h1>Top Content</h1>
     #set($count = 1)
     #set($periods = $table.size())
-    <table style="width:100%">
+    <table>
         <tr>
             <th>Number</th>
             <th>OID/Name</th>
